--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -11,6 +11,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="57dp"
+        android:id="@+id/titleText"
         android:background="@drawable/moretxt"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,17 +22,16 @@
 
 
     <Button
-        android:layout_width="30dp"
-        android:layout_height="40dp"
+        android:layout_width="18dp"
+        android:layout_height="24dp"
         android:background="@drawable/back"
         android:clickable="true"
         android:onClick="back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.018"
+        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/titleText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.014" />
+        android:layout_marginLeft="20dp" />
 
     <Button
         android:id="@+id/video"
@@ -74,5 +74,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.259" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_height="56dp"
+        android:background="@android:color/holo_red_dark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="34dp"
+            android:layout_marginStart="20dp"
+            android:layout_centerVertical="true"
+            android:layout_height="34dp"
+            android:src="@drawable/logout"
+            android:layout_marginLeft="20dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:onClick="userLogout"
+            android:text="Logout"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/white"/>
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
