--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,8 +12,8 @@
 
     <Button
         android:id="@+id/btnRed"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="265dp"
+        android:layout_height="254dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:background="@drawable/sos"
@@ -24,14 +24,14 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131" />
+        app:layout_constraintVertical_bias="0.12" />
 
     <Button
         android:id="@+id/btnYellow"
-        android:layout_width="120dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
@@ -50,7 +50,7 @@
 
     <Button
         android:id="@+id/btnGreen"
-        android:layout_width="120dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
@@ -85,7 +85,7 @@
 
     <Button
         android:id="@+id/btnSetting"
-        android:layout_width="120dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_margin="10dp"
         android:background="@drawable/profile"
@@ -103,48 +103,30 @@
 
     <Button
         android:id="@+id/morebutton"
-        android:layout_width="8dp"
-        android:layout_height="20dp"
-        android:background="@drawable/more"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_moredots"
         android:clickable="true"
         android:onClick="morebutton"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.915"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.042" />
+        />
 
 
     <Button
         android:layout_width="130dp"
+        android:id="@+id/flashButton"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/flash"
+        android:background="@drawable/flashnew"
         android:fontFamily="sans-serif-medium"
-        android:onClick="toggle"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.288"
+        app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:background="@drawable/logout"
-        android:onClick="userLogout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.992" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
